Clean up CRA, add dependencies and add basic blog form

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "LJ06 Blog",
+  "name": "LJ's Blog",
   "icons": [
     {
       "src": "favicon.ico",
